--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# Auth
+BETTER_AUTH_SECRET="your_secret_key"
+BETTER_AUTH_URL="http://localhost:5173"
+
 # SMTP
 SMTP_PORT="587"
 SMTP_HOST="smtp.example.com"
