feat: Social auth

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,11 @@
 BETTER_AUTH_SECRET="your_secret_key"
 BETTER_AUTH_URL="http://localhost:5173"
 
+## OAuth
+GOOGLE_CLIENT_ID="your_google_client_id"
+GOOGLE_CLIENT_SECRET="your_google_client_secret"
+
+
 # SMTP
 SMTP_PORT="587"
 SMTP_HOST="smtp.example.com"
