--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@iconify-json/devicon-plain": "^1.2.38",
+    "@iconify-json/heroicons": "^1.2.2",
     "@sveltejs/adapter-vercel": "^5.8.1",
     "@sveltejs/kit": "^2.27.2",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
@@ -28,6 +30,7 @@
     "tailwindcss": "^4.1.11",
     "tslib": "^2.8.1",
     "typescript": "^5.9.2",
+    "unplugin-icons": "^22.2.0",
     "vite": "^7.1.0"
   },
   "dependencies": {
