--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@sveltejs/kit": "^2.27.2",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/nodemailer": "^7.0.1",
+    "@types/turndown": "^5.0.5",
     "daisyui": "^5.0.50",
     "dotenv": "^17.2.1",
     "postcss": "^8.5.6",
@@ -37,10 +39,12 @@
     "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.11.0",
     "better-auth": "^1.3.7",
-    "emailjs": "^4.0.3",
+    "ky": "^1.9.0",
     "mongoose": "^8.17.0",
+    "nodemailer": "^7.0.5",
     "svelte-daisyui-toast": "^2.0.3",
     "theme-change": "^2.5.0",
+    "turndown": "^7.2.1",
     "zod": "^4.0.15"
   }
 }
