--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,10 @@ EMAIL_FROM="admin@example.com"
 # Discord
 DISCORD_WEBHOOK_URL="https://discord.com/api/webhooks/your_webhook_url"
 
-# Mongo
-MONGO_URI="mongodb://localhost:27017"
+# Database
+
+## Mongo
+MONGO_URL="mongodb://localhost:27017"
+
+## Redis
+REDIS_URL="redis://localhost:6379"
