--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ BETTER_AUTH_URL="http://localhost:5173"
 GOOGLE_CLIENT_ID="your_google_client_id"
 GOOGLE_CLIENT_SECRET="your_google_client_secret"
 
+# Logging
+LOG_LEVEL="info"
+NO_COLOR="false"
 
 # SMTP
 SMTP_PORT="587"
