--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "better-auth": "^1.3.7",
+    "ioredis": "^5.7.0",
     "ky": "^1.9.0",
     "mongoose": "^8.17.0",
     "nodemailer": "^7.0.5",
-    "redis": "^5.8.2",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1",
     "svelte-daisyui-toast": "^2.0.3",
     "theme-change": "^2.5.0",
     "turndown": "^7.2.1",
