--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,15 @@
 # Auth
 BETTER_AUTH_SECRET="your_secret_key"
-BETTER_AUTH_URL="http://localhost:5173"
 
 ## OAuth
+### Google
 GOOGLE_CLIENT_ID="your_google_client_id"
 GOOGLE_CLIENT_SECRET="your_google_client_secret"
+
+### PocketID
+POCKETID_CLIENT_ID="your_pocketid_client_id"
+POCKETID_CLIENT_SECRET="your_pocketid_client_secret"
+POCKETID_BASE_URL="https://pocketid.domain.com"
 
 # Logging
 LOG_LEVEL="info"
