--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 PUBLIC_BASE_URL="http://localhost:5173"
 
 # Auth
+# NOTE: Sigh, can't get better-auth working without this env var
+# So we just have to duplicate it for now
+BETTER_AUTH_URL="http://localhost:5173"
 BETTER_AUTH_SECRET="your_secret_key"
 
 ## OAuth
