--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ POCKETID_BASE_URL="https://pocketid.domain.com"
 LOG_LEVEL="info"
 NO_COLOR="false"
 
+# Analytics
+UMAMI_BASE_URL="https://eu.umami.com"
+UMAMI_WEBSITE_ID="your_umami_website_id"
+
 # SMTP
 SMTP_PORT="587"
 SMTP_HOST="smtp.example.com"
