fix: Umami env vars are PUBLIC_

--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ LOG_LEVEL="info"
 NO_COLOR="false"
 
 # Analytics
-UMAMI_BASE_URL="https://eu.umami.com"
-UMAMI_WEBSITE_ID="your_umami_website_id"
+PUBLIC_UMAMI_BASE_URL="https://eu.umami.com"
+PUBLIC_UMAMI_WEBSITE_ID="your_PUBLIC_UMAMI_WEBSITE_ID"
 
 # SMTP
 SMTP_PORT="587"
