--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,6 @@ MONGO_URL="mongodb://localhost:27017"
 
 ## Redis
 REDIS_URL="redis://localhost:6379"
+
+# Postgres
+DATABASE_URL="postgres://user:password@host:port/db-name"
