--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "format": "prettier --write .",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "eslint . && prettier --check ."
+    "lint": "eslint . && prettier --check .",
+    "db:push": "drizzle-kit push",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
@@ -23,11 +27,13 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/node": "^22",
     "@types/nodemailer": "^7.0.1",
     "@types/turndown": "^5.0.5",
     "@types/umami": "^2.10.0",
     "daisyui": "^5.0.50",
     "dotenv": "^17.2.1",
+    "drizzle-kit": "^0.30.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^3.0.0",
@@ -48,11 +54,12 @@
     "vite-plugin-devtools-json": "^1.0.0"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "@tailwindcss/forms": "^0.5.10",
     "better-auth": "^1.3.7",
+    "drizzle-orm": "^0.40.0",
     "ioredis": "^5.7.0",
     "ky": "^1.9.0",
-    "mongoose": "^8.17.0",
     "nodemailer": "^7.0.5",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
