--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint . && prettier --check .",
-    "db:push": "drizzle-kit push",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "SOURCE": "https://www.sveltepatterns.dev/how-to-access-svelte-specific-api-in-a-script",
+    "db": "npx vite-node --options.transformMode.ssr='/.*/' ./scripts/drizzle/kit.script.ts"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
     "@eslint/js": "^9.18.0",
     "@iconify-json/devicon-plain": "^1.2.38",
     "@iconify-json/heroicons": "^1.2.2",
+    "@iconify/tailwind4": "^1.0.6",
     "@sveltejs/adapter-vercel": "^5.8.1",
     "@sveltejs/kit": "^2.27.2",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
@@ -30,14 +29,15 @@
     "@types/node": "^22",
     "@types/nodemailer": "^7.0.1",
     "@types/turndown": "^5.0.5",
-    "@types/umami": "^2.10.0",
+    "@types/umami": "^2.10.1",
     "daisyui": "^5.0.50",
     "dotenv": "^17.2.1",
-    "drizzle-kit": "^0.30.2",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^3.0.0",
     "globals": "^16.0.0",
+    "pino-pretty": "^13.1.1",
     "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
@@ -49,20 +49,17 @@
     "tslib": "^2.8.1",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.20.0",
-    "unplugin-icons": "^22.2.0",
     "vite": "^7.1.0",
     "vite-plugin-devtools-json": "^1.0.0"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
-    "@tailwindcss/forms": "^0.5.10",
     "better-auth": "^1.3.7",
-    "drizzle-orm": "^0.40.0",
+    "drizzle-orm": "^0.44.5",
     "ioredis": "^5.7.0",
     "ky": "^1.9.0",
     "nodemailer": "^7.0.5",
     "pino": "^9.9.0",
-    "pino-pretty": "^13.1.1",
     "svelte-daisyui-toast": "^2.0.3",
     "theme-change": "^2.5.0",
     "turndown": "^7.2.1",
