--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@eslint/js": "^9.18.0",
     "@iconify-json/devicon-plain": "^1.2.38",
     "@iconify-json/heroicons": "^1.2.2",
+    "@iconify-json/mdi": "^1.2.3",
     "@iconify/tailwind4": "^1.0.6",
     "@sveltejs/adapter-vercel": "^5.8.1",
     "@sveltejs/kit": "^2.27.2",
