--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify/tailwind4": "^1.0.6",
+    "@internationalized/date": "^3.9.0",
+    "@lucide/svelte": "^0.515.0",
     "@sveltejs/adapter-vercel": "^5.8.1",
     "@sveltejs/kit": "^2.27.2",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
@@ -31,6 +33,8 @@
     "@types/nodemailer": "^7.0.1",
     "@types/turndown": "^5.0.5",
     "@types/umami": "^2.10.1",
+    "bits-ui": "^2.9.4",
+    "clsx": "^2.1.1",
     "daisyui": "^5.0.50",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
@@ -46,8 +50,11 @@
     "svelte": "^5.38.0",
     "svelte-check": "^4.3.1",
     "svelte-preprocess": "^6.0.3",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.0.0",
     "tslib": "^2.8.1",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.20.0",
     "vite": "^7.1.0",
@@ -60,6 +67,7 @@
     "drizzle-orm": "^0.44.5",
     "ioredis": "^5.7.0",
     "ky": "^1.9.0",
+    "mode-watcher": "^1.1.0",
     "nodemailer": "^7.0.5",
     "pino": "^9.9.0",
     "svelte-daisyui-toast": "^2.0.3",
