--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@eslint/js": "^9.18.0",
     "@iconify-json/devicon-plain": "^1.2.38",
     "@iconify-json/heroicons": "^1.2.2",
+    "@iconify-json/lucide": "^1.2.65",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify/tailwind4": "^1.0.6",
     "@internationalized/date": "^3.9.0",
@@ -70,7 +71,6 @@
     "nodemailer": "^7.0.5",
     "pino": "^9.9.0",
     "svelte-daisyui-toast": "^2.0.3",
-    "theme-change": "^2.5.0",
     "turndown": "^7.2.1",
     "zod": "^4.0.15"
   }
