--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^3.0.0",
+    "formsnap": "^2.0.1",
     "globals": "^16.0.0",
     "pino-pretty": "^13.1.1",
     "postcss": "^8.5.6",
@@ -50,6 +51,7 @@
     "svelte": "^5.38.0",
     "svelte-check": "^4.3.1",
     "svelte-preprocess": "^6.0.3",
+    "sveltekit-superforms": "^2.27.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.0.0",
@@ -70,8 +72,8 @@
     "mode-watcher": "^1.1.0",
     "nodemailer": "^7.0.5",
     "pino": "^9.9.0",
-    "svelte-daisyui-toast": "^2.0.3",
+    "svelte-sonner": "^1.0.5",
     "turndown": "^7.2.1",
-    "zod": "^4.0.15"
+    "zod": "4.0.10"
   }
 }
