--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@iconify-json/mdi": "^1.2.3",
     "@iconify/tailwind4": "^1.0.6",
     "@internationalized/date": "^3.9.0",
+    "@lucide/svelte": "^0.515.0",
     "@sveltejs/adapter-vercel": "^5.8.1",
     "@sveltejs/kit": "^2.27.2",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
