--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@iconify-json/lucide": "^1.2.66",
     "@iconify/tailwind4": "^1.0.6",
     "@internationalized/date": "^3.9.0",
+    "@lucide/svelte": "^0.515.0",
     "@sveltejs/adapter-vercel": "^5.10.2",
     "@sveltejs/kit": "^2.37.0",
     "@sveltejs/vite-plugin-svelte": "^6.1.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/table-core": "^8.21.3",
     "@types/node": "^24",
     "@types/nodemailer": "^7.0.1",
     "@types/turndown": "^5.0.5",
