--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@qwik.dev/partytown": "^0.11.2",
     "better-auth": "^1.3.7",
     "drizzle-orm": "^0.44.5",
+    "effect": "^3.17.13",
     "ioredis": "^5.7.0",
     "ky": "^1.9.1",
     "mode-watcher": "^1.1.0",
