--- a/package.json
+++ b/package.json
@@ -16,31 +16,31 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
-    "@eslint/js": "^9.34.0",
+    "@eslint/js": "^9.35.0",
     "@iconify-json/devicon-plain": "^1.2.39",
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/lucide": "^1.2.66",
     "@iconify/tailwind4": "^1.0.6",
     "@internationalized/date": "^3.9.0",
-    "@lucide/svelte": "^0.515.0",
+    "@lucide/svelte": "^0.542.0",
     "@sveltejs/adapter-vercel": "^5.10.2",
     "@sveltejs/kit": "^2.37.0",
-    "@sveltejs/vite-plugin-svelte": "^6.1.3",
+    "@sveltejs/vite-plugin-svelte": "^6.1.4",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.1.12",
-    "@tailwindcss/vite": "^4.1.12",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/vite": "^4.1.13",
     "@tanstack/table-core": "^8.21.3",
     "@types/node": "^24",
     "@types/nodemailer": "^7.0.1",
     "@types/turndown": "^5.0.5",
     "@types/umami": "^2.10.1",
-    "bits-ui": "^2.9.4",
+    "bits-ui": "^2.9.6",
     "clsx": "^2.1.1",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.2",
     "drizzle-kit": "^0.31.4",
-    "eslint": "^9.34.0",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-svelte": "^3.11.0",
+    "eslint-plugin-svelte": "^3.12.1",
     "formsnap": "^2.0.1",
     "globals": "^16.3.0",
     "pino-pretty": "^13.1.1",
@@ -48,33 +48,33 @@
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "svelte": "^5.38.6",
+    "svelte": "^5.38.7",
     "svelte-check": "^4.3.1",
     "svelte-preprocess": "^6.0.3",
     "sveltekit-superforms": "^2.27.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.0",
-    "tailwindcss": "^4.1.12",
+    "tailwindcss": "^4.1.13",
     "tslib": "^2.8.1",
-    "tw-animate-css": "^1.3.7",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.41.0",
-    "vite": "^7.1.3",
+    "typescript-eslint": "^8.42.0",
+    "vite": "^7.1.4",
     "vite-plugin-devtools-json": "^1.0.0"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
     "@qwik.dev/partytown": "^0.11.2",
-    "better-auth": "^1.3.7",
+    "better-auth": "^1.3.8",
     "drizzle-orm": "^0.44.5",
     "effect": "^3.17.13",
     "ioredis": "^5.7.0",
-    "ky": "^1.9.1",
+    "ky": "^1.10.0",
     "mode-watcher": "^1.1.0",
     "nodemailer": "^7.0.6",
-    "pino": "^9.9.0",
+    "pino": "^9.9.4",
     "svelte-sonner": "^1.0.5",
     "turndown": "^7.2.1",
-    "zod": "4.0.10"
+    "zod": "=4.0.10"
   }
 }
