--- a/package.json
+++ b/package.json
@@ -68,10 +68,10 @@
     "better-auth": "^1.3.8",
     "drizzle-orm": "^0.44.5",
     "effect": "^3.17.13",
+    "emailjs": "^4.0.3",
     "ioredis": "^5.7.0",
     "ky": "^1.10.0",
     "mode-watcher": "^1.1.0",
-    "nodemailer": "^7.0.6",
     "pino": "^9.9.4",
     "svelte-sonner": "^1.0.5",
     "turndown": "^7.2.1",
