--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint . && prettier --check .",
     "SOURCE": "https://www.sveltepatterns.dev/how-to-access-svelte-specific-api-in-a-script",
-    "db": "npx vite-node --options.transformMode.ssr='/.*/' ./scripts/drizzle/kit.script.ts"
+    "_db": "npx vite-node --options.transformMode.ssr='/.*/' ./scripts/drizzle/kit.script.ts",
+    "db:push": "npm run _db push",
+    "db:generate": "dotenvx run --env-file=.env.production -- npm run _db generate",
+    "db:check": "dotenvx run --env-file=.env.production -- npm run _db check",
+    "db:migrate": "npm run _db migrate",
+    "db:studio": "npm run _db studio"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
     "@eslint/js": "^9.35.0",
-    "@iconify-json/devicon-plain": "^1.2.39",
-    "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/lucide": "^1.2.66",
     "@iconify/tailwind4": "^1.0.6",
     "@internationalized/date": "^3.9.0",
@@ -46,8 +49,10 @@
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "super-sitemap": "^1.0.5",
     "svelte": "^5.38.7",
     "svelte-check": "^4.3.1",
+    "svelte-meta-tags": "^4.4.1",
     "svelte-preprocess": "^6.0.3",
     "sveltekit-superforms": "^2.27.1",
     "tailwind-merge": "^3.3.1",
@@ -63,6 +68,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
     "@qwik.dev/partytown": "^0.11.2",
+    "@unpic/svelte": "^1.0.0",
     "better-auth": "^1.3.9",
     "drizzle-orm": "^0.44.5",
     "effect": "^3.17.13",
