--- a/package.json
+++ b/package.json
@@ -20,65 +20,66 @@
     "db:studio": "npm run _db studio"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.3.2",
+    "@eslint/compat": "^1.4.0",
     "@eslint/js": "^9.35.0",
-    "@iconify-json/lucide": "^1.2.66",
+    "@iconify-json/lucide": "^1.2.68",
+    "@iconify-json/mdi": "^1.2.3",
     "@iconify/tailwind4": "^1.0.6",
-    "@internationalized/date": "^3.9.0",
+    "@internationalized/date": "^3.10.0",
     "@lucide/svelte": "^0.542.0",
-    "@sveltejs/adapter-vercel": "^5.10.2",
-    "@sveltejs/kit": "^2.37.1",
-    "@sveltejs/vite-plugin-svelte": "^6.1.4",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@tailwindcss/vite": "^4.1.13",
+    "@sveltejs/adapter-vercel": "^5.10.3",
+    "@sveltejs/kit": "^2.43.8",
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@tailwindcss/vite": "^4.1.14",
     "@tanstack/table-core": "^8.21.3",
-    "@types/node": "^24",
+    "@types/node": "^24.6.2",
     "@types/turndown": "^5.0.5",
     "@types/umami": "^2.10.1",
-    "bits-ui": "^2.9.6",
+    "bits-ui": "^2.11.4",
     "clsx": "^2.1.1",
-    "dotenv": "^17.2.2",
-    "drizzle-kit": "^0.31.4",
-    "eslint": "^9.35.0",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.5",
+    "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-svelte": "^3.12.1",
+    "eslint-plugin-svelte": "^3.12.4",
     "formsnap": "^2.0.1",
-    "globals": "^16.3.0",
+    "globals": "^16.4.0",
     "pino-pretty": "^13.1.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "super-sitemap": "^1.0.5",
-    "svelte": "^5.38.7",
-    "svelte-check": "^4.3.1",
+    "svelte": "^5.39.8",
+    "svelte-check": "^4.3.2",
     "svelte-meta-tags": "^4.4.1",
     "svelte-preprocess": "^6.0.3",
-    "sveltekit-superforms": "^2.27.1",
+    "sveltekit-superforms": "^2.27.2",
     "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^3.1.0",
+    "tailwind-variants": "^3.1.1",
     "tailwindcss": "^4.1.13",
     "tslib": "^2.8.1",
-    "tw-animate-css": "^1.3.8",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.42.0",
-    "vite": "^7.1.4",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0",
+    "vite": "^7.1.9",
     "vite-plugin-devtools-json": "^1.0.0"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^1.0.1",
+    "@neondatabase/serverless": "^1.0.2",
     "@qwik.dev/partytown": "^0.11.2",
     "@unpic/svelte": "^1.0.0",
-    "better-auth": "^1.3.9",
-    "drizzle-orm": "^0.44.5",
-    "effect": "^3.17.13",
+    "better-auth": "^1.3.26",
+    "drizzle-orm": "^0.44.6",
+    "effect": "^3.18.2",
     "emailjs": "^4.0.3",
-    "ioredis": "^5.7.0",
-    "ky": "^1.10.0",
+    "ioredis": "^5.8.0",
+    "ky": "^1.11.0",
     "mode-watcher": "^1.1.0",
-    "pino": "^9.9.4",
+    "pino": "^9.13.1",
     "svelte-sonner": "^1.0.5",
     "turndown": "^7.2.1",
-    "zod": "=4.0.10"
+    "zod": "^4.1.11"
   }
 }
