--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "format": "prettier --write .",
+    "knip": "knip",
+    "lint": "npx oxlint --type-aware && npx eslint . && prettier . --check --experimental-cli",
+    "format": "prettier . --write --experimental-cli",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "eslint . && prettier --check .",
     "SOURCE": "https://www.sveltepatterns.dev/how-to-access-svelte-specific-api-in-a-script",
     "_db": "npx vite-node --options.transformMode.ssr='/.*/' ./scripts/drizzle/kit.script.ts",
     "db:push": "npm run _db push",
@@ -19,51 +20,61 @@
     "db:migrate": "npm run _db migrate",
     "db:studio": "npm run _db studio"
   },
+  "packageManager": "pnpm@10.23.0",
+  "engines": {
+    "node": "22"
+  },
   "devDependencies": {
-    "@eslint/compat": "^1.4.0",
-    "@eslint/js": "^9.35.0",
-    "@iconify-json/lucide": "^1.2.68",
+    "@eslint/compat": "^1.4.1",
+    "@eslint/js": "^9.39.1",
+    "@iconify-json/lucide": "^1.2.74",
     "@iconify-json/mdi": "^1.2.3",
-    "@iconify/tailwind4": "^1.0.6",
+    "@iconify/tailwind4": "^1.1.0",
     "@internationalized/date": "^3.10.0",
     "@lucide/svelte": "^0.542.0",
+    "@prettier/plugin-oxc": "^0.0.5",
     "@sveltejs/adapter-vercel": "^5.10.3",
-    "@sveltejs/kit": "^2.43.8",
+    "@sveltejs/kit": "^2.49.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "@tailwindcss/postcss": "^4.1.14",
-    "@tailwindcss/vite": "^4.1.14",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.17",
     "@tanstack/table-core": "^8.21.3",
-    "@types/node": "^24.6.2",
-    "@types/turndown": "^5.0.5",
+    "@types/node": "^24.10.1",
+    "@types/turndown": "^5.0.6",
     "@types/umami": "^2.10.1",
-    "bits-ui": "^2.11.4",
+    "bits-ui": "^2.14.4",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
-    "drizzle-kit": "^0.31.5",
-    "eslint": "^9.37.0",
+    "drizzle-kit": "^0.31.7",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-svelte": "^3.12.4",
+    "eslint-plugin-oxlint": "^1.29.0",
+    "eslint-plugin-svelte": "^3.13.0",
     "formsnap": "^2.0.1",
-    "globals": "^16.4.0",
-    "pino-pretty": "^13.1.1",
+    "globals": "^16.5.0",
+    "knip": "^5.70.1",
+    "oxfmt": "^0.14.0",
+    "oxlint": "^1.29.0",
+    "oxlint-tsgolint": "^0.8.0",
+    "pino-pretty": "^13.1.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "super-sitemap": "^1.0.5",
-    "svelte": "^5.39.8",
-    "svelte-check": "^4.3.2",
-    "svelte-meta-tags": "^4.4.1",
+    "svelte": "5.43.14",
+    "svelte-check": "^4.3.4",
+    "svelte-meta-tags": "^4.5.0",
     "svelte-preprocess": "^6.0.3",
-    "sveltekit-superforms": "^2.27.2",
-    "tailwind-merge": "^3.3.1",
+    "sveltekit-superforms": "^2.28.1",
+    "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.1.1",
-    "tailwindcss": "^4.1.13",
+    "tailwindcss": "^4.1.17",
     "tslib": "^2.8.1",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.9",
+    "typescript-eslint": "^8.47.0",
+    "vite": "^7.2.4",
     "vite-plugin-devtools-json": "^1.0.0"
   },
   "dependencies": {
@@ -71,15 +82,15 @@
     "@qwik.dev/partytown": "^0.11.2",
     "@unpic/svelte": "^1.0.0",
     "better-auth": "^1.3.26",
-    "drizzle-orm": "^0.44.6",
-    "effect": "^3.18.2",
+    "drizzle-orm": "^0.44.7",
+    "effect": "^3.19.6",
     "emailjs": "^4.0.3",
-    "ioredis": "^5.8.0",
-    "ky": "^1.11.0",
+    "ioredis": "^5.8.2",
+    "ky": "^1.14.0",
     "mode-watcher": "^1.1.0",
-    "pino": "^9.13.1",
-    "svelte-sonner": "^1.0.5",
-    "turndown": "^7.2.1",
-    "zod": "^4.1.11"
+    "pino": "^9.14.0",
+    "svelte-sonner": "^1.0.6",
+    "turndown": "^7.2.2",
+    "zod": "^4.1.12"
   }
 }
