--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
-  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "plugins": [
+    "@prettier/plugin-oxc",
+    "prettier-plugin-svelte",
+    "prettier-plugin-tailwindcss"
+  ],
   "overrides": [
     {
       "files": "*.svelte",
@@ -8,5 +12,7 @@
       }
     }
   ],
-  "tailwindStylesheet": "./src/app.css"
+  "tailwindStylesheet": "./src/app.css",
+
+  "singleAttributePerLine": true
 }
