--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node": "22"
   },
   "devDependencies": {
+    "@dotenvx/dotenvx": "^1.51.1",
     "@eslint/compat": "^1.4.1",
     "@eslint/js": "^9.39.1",
     "@iconify-json/lucide": "^1.2.74",
@@ -78,10 +79,11 @@
     "vite-plugin-devtools-json": "^1.0.0"
   },
   "dependencies": {
+    "@better-auth/passkey": "^1.4.0",
     "@neondatabase/serverless": "^1.0.2",
     "@qwik.dev/partytown": "^0.11.2",
     "@unpic/svelte": "^1.0.0",
-    "better-auth": "^1.3.26",
+    "better-auth": "^1.4.0",
     "drizzle-orm": "^0.44.7",
     "effect": "^3.19.6",
     "emailjs": "^4.0.3",
