--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "SOURCE": "https://www.sveltepatterns.dev/how-to-access-svelte-specific-api-in-a-script",
     "_db": "npx vite-node --options.transformMode.ssr='/.*/' ./scripts/drizzle/kit.script.ts",
-    "db:push": "npm run _db push",
-    "db:generate": "dotenvx run --env-file=.env.production -- npm run _db generate",
-    "db:check": "dotenvx run --env-file=.env.production -- npm run _db check",
-    "db:migrate": "npm run _db migrate",
-    "db:studio": "npm run _db studio"
+    "db:push": "pnpm _db push",
+    "db:generate": "dotenvx run --env-file=.env.production -- pnpm _db generate",
+    "db:check": "dotenvx run --env-file=.env.production -- pnpm _db check",
+    "db:migrate": "pnpm _db migrate",
+    "db:studio": "pnpm _db studio"
   },
   "packageManager": "pnpm@10.23.0",
   "engines": {
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.51.1",
-    "@eslint/compat": "^1.4.1",
+    "@eslint/compat": "^2.0.0",
     "@eslint/js": "^9.39.1",
     "@iconify-json/lucide": "^1.2.74",
     "@iconify-json/mdi": "^1.2.3",
@@ -34,7 +34,7 @@
     "@internationalized/date": "^3.10.0",
     "@lucide/svelte": "^0.542.0",
     "@prettier/plugin-oxc": "^0.0.5",
-    "@sveltejs/adapter-vercel": "^5.10.3",
+    "@sveltejs/adapter-vercel": "^6.1.2",
     "@sveltejs/kit": "^2.49.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/postcss": "^4.1.17",
@@ -61,7 +61,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
-    "prettier-plugin-tailwindcss": "^0.6.14",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "super-sitemap": "^1.0.5",
     "svelte": "5.43.14",
     "svelte-check": "^4.3.4",
@@ -75,8 +75,7 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.47.0",
-    "vite": "^7.2.4",
-    "vite-plugin-devtools-json": "^1.0.0"
+    "vite": "^7.2.4"
   },
   "dependencies": {
     "@better-auth/passkey": "^1.4.0",
