--- a/package.json
+++ b/package.json
@@ -78,14 +78,14 @@
     "@neondatabase/serverless": "^1.0.2",
     "@qwik.dev/partytown": "^0.11.2",
     "@unpic/svelte": "^1.0.0",
+    "@upstash/redis": "^1.35.6",
     "better-auth": "^1.4.0",
     "drizzle-orm": "^0.44.7",
     "effect": "^3.19.6",
-    "emailjs": "^4.0.3",
-    "ioredis": "^5.8.2",
     "ky": "^1.14.0",
     "mode-watcher": "^1.1.0",
     "pino": "^9.14.0",
+    "resend": "^6.5.2",
     "svelte-sonner": "^1.0.6",
     "turndown": "^7.2.2",
     "zod": "^4.1.12"
