--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-oxlint": "^1.29.0",
     "eslint-plugin-svelte": "^3.13.0",
-    "formsnap": "^2.0.1",
     "globals": "^16.5.0",
     "knip": "^5.70.1",
     "oxfmt": "^0.14.0",
@@ -64,7 +63,6 @@
     "svelte": "5.43.14",
     "svelte-check": "^4.3.4",
     "svelte-meta-tags": "^4.5.0",
-    "sveltekit-superforms": "^2.28.1",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.1.1",
     "tailwindcss": "^4.1.17",
@@ -86,6 +84,7 @@
     "mode-watcher": "^1.1.0",
     "pino": "^9.14.0",
     "resend": "^6.5.2",
+    "runed": "^0.36.0",
     "svelte-sonner": "^1.0.6",
     "turndown": "^7.2.2",
     "zod": "^4.1.12"
