--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@dotenvx/dotenvx": "^1.51.1",
     "@eslint/compat": "^2.0.0",
     "@eslint/js": "^9.39.1",
-    "@iconify-json/lucide": "^1.2.74",
+    "@iconify-json/lucide": "^1.2.75",
     "@iconify/tailwind4": "^1.1.0",
     "@internationalized/date": "^3.10.0",
     "@prettier/plugin-oxc": "^0.0.5",
@@ -52,8 +52,8 @@
     "globals": "^16.5.0",
     "knip": "^5.70.1",
     "oxfmt": "^0.14.0",
-    "oxlint": "^1.29.0",
-    "oxlint-tsgolint": "^0.8.0",
+    "oxlint": "^1.30.0",
+    "oxlint-tsgolint": "^0.8.1",
     "pino-pretty": "^13.1.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
@@ -64,7 +64,7 @@
     "svelte-check": "^4.3.4",
     "svelte-meta-tags": "^4.5.0",
     "tailwind-merge": "^3.4.0",
-    "tailwind-variants": "^3.1.1",
+    "tailwind-variants": "^3.2.2",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
@@ -72,13 +72,14 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
-    "@better-auth/passkey": "^1.4.0",
+    "@better-auth/passkey": "^1.4.1",
     "@neondatabase/serverless": "^1.0.2",
     "@qwik.dev/partytown": "^0.11.2",
     "@unpic/svelte": "^1.0.0",
     "@upstash/redis": "^1.35.6",
-    "better-auth": "^1.4.0",
+    "better-auth": "^1.4.1",
     "drizzle-orm": "^0.44.7",
+    "drizzle-zod": "^0.8.3",
     "effect": "^3.19.6",
     "ky": "^1.14.0",
     "mode-watcher": "^1.1.0",
@@ -87,6 +88,6 @@
     "runed": "^0.36.0",
     "svelte-sonner": "^1.0.6",
     "turndown": "^7.2.2",
-    "zod": "^4.1.12"
+    "zod": "^4.1.13"
   }
 }
