--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "target": "es2022",
+    "verbatimModuleSyntax": true,
+    "isolatedModules": true
   }
 }
