--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@better-auth/passkey": "^1.4.1",
     "@neondatabase/serverless": "^1.0.2",
     "@qwik.dev/partytown": "^0.11.2",
+    "@sentry/sveltekit": "^10.27.0",
     "@unpic/svelte": "^1.0.0",
     "@upstash/redis": "^1.35.6",
     "better-auth": "^1.4.1",
