Remove range-calendar

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "knip": "knip",
     "lint": "npx oxlint --type-aware && npx eslint . && prettier . --check --experimental-cli",
     "format": "prettier . --write --experimental-cli",
+    "sonda": "SONDA=1 pnpm build",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "SOURCE": "https://www.sveltepatterns.dev/how-to-access-svelte-specific-api-in-a-script",
@@ -59,6 +60,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "sonda": "^0.10.0",
     "super-sitemap": "^1.0.5",
     "svelte": "5.45.2",
     "svelte-check": "^4.3.4",
