--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "build": "vite build",
     "preview": "vite preview",
     "knip": "knip",
-    "lint": "npx oxlint --type-aware && npx eslint . && prettier . --check --experimental-cli",
+    "lint": "oxlint --type-aware && eslint . && prettier . --check --experimental-cli",
     "format": "prettier . --write --experimental-cli",
     "sonda": "SONDA=1 pnpm build",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "SOURCE": "https://www.sveltepatterns.dev/how-to-access-svelte-specific-api-in-a-script",
-    "_db": "npx vite-node --options.transformMode.ssr='/.*/' ./scripts/drizzle/kit.script.ts",
+    "_db": "vite-node --options.transformMode.ssr='/.*/' ./scripts/drizzle/kit.script.ts",
     "db:push": "pnpm _db push",
     "db:generate": "dotenvx run --env-file=.env.production -- pnpm _db generate",
     "db:check": "dotenvx run --env-file=.env.production -- pnpm _db check",
@@ -29,8 +29,8 @@
     "@dotenvx/dotenvx": "^1.51.1",
     "@eslint/compat": "^2.0.0",
     "@eslint/js": "^9.39.1",
-    "@iconify-json/lucide": "^1.2.75",
-    "@iconify/tailwind4": "^1.1.1",
+    "@iconify-json/lucide": "^1.2.76",
+    "@iconify/tailwind4": "^1.2.0",
     "@internationalized/date": "^3.10.0",
     "@prettier/plugin-oxc": "^0.0.5",
     "@sveltejs/adapter-vercel": "^6.2.0",
@@ -57,7 +57,7 @@
     "oxlint-tsgolint": "^0.8.3",
     "pino-pretty": "^13.1.2",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.1",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "sonda": "^0.10.0",
@@ -71,7 +71,8 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.0",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-node": "^5.2.0"
   },
   "dependencies": {
     "@better-auth/passkey": "^1.4.3",
@@ -83,7 +84,7 @@
     "better-auth": "^1.4.3",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
-    "effect": "^3.19.7",
+    "effect": "^3.19.8",
     "ky": "^1.14.0",
     "mode-watcher": "^1.1.0",
     "pino": "^9.14.0",
