--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@sveltejs/adapter-vercel": "^6.2.0",
     "@sveltejs/kit": "^2.49.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/table-core": "^8.21.3",
@@ -71,8 +72,13 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.0",
-    "vite": "^7.2.4",
+    "vite": "npm:rolldown-vite@7.2.8",
     "vite-node": "^5.2.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "vite": "npm:rolldown-vite@7.2.8"
+    }
   },
   "dependencies": {
     "@better-auth/passkey": "^1.4.3",
