sv add prettier

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "knip": "knip",
-    "lint": "oxlint --type-aware && eslint . && prettier . --check --experimental-cli",
+    "lint": "oxlint --type-aware && eslint . && prettier --check --experimental-cli .",
     "format": "prettier . --write --experimental-cli",
     "sonda": "SONDA=1 pnpm build",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -58,7 +58,7 @@
     "oxlint-tsgolint": "^0.8.3",
     "pino-pretty": "^13.1.2",
     "postcss": "^8.5.6",
-    "prettier": "^3.7.1",
+    "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "sonda": "^0.10.0",
