--- a/.prettierrc
+++ b/.prettierrc
@@ -12,6 +12,6 @@
       }
     }
   ],
-  "tailwindStylesheet": "./src/app.css",
+  "tailwindStylesheet": "./src/routes/layout.css",
   "singleAttributePerLine": true
 }
