--- a/package.json
+++ b/package.json
@@ -21,66 +21,67 @@
     "db:migrate": "pnpm _db migrate",
     "db:studio": "pnpm _db studio"
   },
-  "packageManager": "pnpm@10.23.0",
+  "packageManager": "pnpm@10.25.0",
   "engines": {
-    "node": "24"
+    "node": ">=24.11.0"
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.51.1",
     "@eslint/compat": "^2.0.0",
     "@eslint/js": "^9.39.1",
-    "@iconify-json/lucide": "^1.2.76",
+    "@iconify-json/lucide": "^1.2.79",
     "@iconify/tailwind4": "^1.2.0",
     "@internationalized/date": "^3.10.0",
     "@prettier/plugin-oxc": "^0.0.5",
     "@sveltejs/adapter-vercel": "^6.2.0",
-    "@sveltejs/kit": "^2.49.0",
+    "@sveltejs/kit": "^2.49.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/table-core": "^8.21.3",
-    "@types/node": "^22",
+    "@types/node": "^24",
+    "@types/qrcode-generator": "^0.0.16",
     "@types/turndown": "^5.0.6",
     "@types/umami": "^2.10.1",
-    "drizzle-kit": "^0.31.7",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-oxlint": "^1.30.0",
-    "eslint-plugin-svelte": "^3.13.0",
+    "eslint-plugin-oxlint": "^1.32.0",
+    "eslint-plugin-svelte": "^3.13.1",
     "globals": "^16.5.0",
-    "knip": "^5.70.2",
+    "knip": "^5.72.0",
     "oxfmt": "^0.15.0",
-    "oxlint": "^1.30.0",
-    "oxlint-tsgolint": "^0.8.3",
-    "pino-pretty": "^13.1.2",
-    "prettier": "^3.6.2",
+    "oxlint": "^1.32.0",
+    "oxlint-tsgolint": "^0.8.4",
+    "pino-pretty": "^13.1.3",
+    "prettier": "^3.7.4",
     "prettier-plugin-svelte": "^3.4.0",
-    "prettier-plugin-tailwindcss": "^0.7.1",
-    "sonda": "^0.10.0",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "sonda": "^0.10.1",
     "super-sitemap": "^1.0.5",
-    "svelte": "5.45.2",
+    "svelte": "5.45.8",
     "svelte-check": "^4.3.4",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.48.0",
-    "vite": "npm:rolldown-vite@7.2.8",
+    "typescript-eslint": "^8.49.0",
+    "vite": "8.0.0-beta.0",
     "vite-node": "^5.2.0"
   },
   "pnpm": {
     "overrides": {
-      "vite": "npm:rolldown-vite@7.2.8"
+      "vite": "8.0.0-beta.0"
     }
   },
   "dependencies": {
     "@better-auth/passkey": "^1.4.3",
     "@neondatabase/serverless": "^1.0.2",
     "@qwik.dev/partytown": "^0.11.2",
-    "@sentry/sveltekit": "^10.27.0",
-    "@unpic/svelte": "^1.0.0",
+    "@sentry/sveltekit": "^10.29.0",
+    "@unpic/svelte": "^1.0.1",
     "@upstash/redis": "^1.35.7",
     "better-auth": "^1.4.3",
     "bits-ui": "^2.14.4",
@@ -89,10 +90,11 @@
     "drizzle-zod": "^0.8.3",
     "mode-watcher": "^1.1.0",
     "pino": "^9.14.0",
+    "qrcode-generator": "^2.0.4",
     "resend": "^6.5.2",
     "runed": "^0.36.0",
-    "svelte-sonner": "^1.0.6",
     "svelte-meta-tags": "^4.5.0",
+    "svelte-sonner": "^1.0.7",
     "zod": "^4.1.13"
   }
 }
