--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "super-sitemap": "^1.0.5",
     "svelte": "5.45.8",
     "svelte-check": "^4.3.4",
+    "sveltekit-flash-message": "^2.4.6",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
     "tailwindcss": "^4.1.17",
