--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@types/node": "^24.10.3",
     "@types/turndown": "^5.0.6",
     "@types/umami": "^2.10.1",
+    "@zxcvbn-ts/core": "^3.0.4",
+    "@zxcvbn-ts/language-common": "^3.0.4",
+    "@zxcvbn-ts/language-en": "^3.0.2",
     "bits-ui": "^2.14.4",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.8",
@@ -64,6 +67,7 @@
     "super-sitemap": "^1.0.5",
     "svelte": "5.45.8",
     "svelte-check": "^4.3.4",
+    "svelte-toolbelt": "^0.10.6",
     "sveltekit-flash-message": "^2.4.6",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
