Enforce password strength

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ PUBLIC_BASE_URL="http://localhost:5173"
 BETTER_AUTH_URL="http://localhost:5173"
 BETTER_AUTH_SECRET="your_secret_key"
 
+
+
 ## OAuth
 ### Google
 GOOGLE_CLIENT_ID="your_google_client_id"
@@ -29,7 +31,9 @@ SMTP_PORT="587"
 SMTP_HOST="smtp.example.com"
 SMTP_USERNAME="username"
 SMTP_PASSWORD="password"
-EMAIL_FROM="admin@example.com"
+EMAIL_FROM="hello@example.com"
+
+ADMIN_EMAIL="admin@example.com"
 
 # Discord
 DISCORD_WEBHOOK_URL="https://discord.com/api/webhooks/your_webhook_url"
