--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,6 @@ PUBLIC_BASE_URL="http://localhost:5173"
 BETTER_AUTH_URL="http://localhost:5173"
 BETTER_AUTH_SECRET="your_secret_key"
 
-
-
 ## OAuth
 ### Google
 GOOGLE_CLIENT_ID="your_google_client_id"
@@ -25,6 +23,8 @@ NO_COLOR="false"
 # Analytics
 PUBLIC_UMAMI_BASE_URL="https://eu.umami.com"
 PUBLIC_UMAMI_WEBSITE_ID="your_PUBLIC_UMAMI_WEBSITE_ID"
+
+PUBLIC_SENTRY_DSN="https://ingest.sentry.io"
 
 # SMTP
 SMTP_PORT="587"
