--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,10 @@ PUBLIC_UMAMI_WEBSITE_ID="your_PUBLIC_UMAMI_WEBSITE_ID"
 
 PUBLIC_SENTRY_DSN="https://ingest.sentry.io"
 
+# Captcha
+CAPTCHA_SECRET_KEY="my-secret-key"
+PUBLIC_CAPTCHA_SITE_KEY="my-site-key"
+
 # SMTP
 SMTP_PORT="587"
 SMTP_HOST="smtp.example.com"
