--- a/package.json
+++ b/package.json
@@ -26,81 +26,81 @@
     "node": ">=24.11.0"
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.51.2",
-    "@eslint/compat": "^2.0.0",
+    "@dotenvx/dotenvx": "^1.51.4",
+    "@eslint/compat": "^2.0.1",
     "@eslint/js": "^9.39.2",
-    "@iconify-json/lucide": "^1.2.82",
-    "@iconify/tailwind4": "^1.2.0",
+    "@iconify-json/lucide": "^1.2.85",
+    "@iconify/tailwind4": "^1.2.1",
     "@internationalized/date": "^3.10.1",
     "@prettier/plugin-oxc": "^0.1.3",
-    "@sveltejs/adapter-vercel": "^6.2.0",
-    "@sveltejs/kit": "^2.49.2",
-    "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@sveltejs/adapter-vercel": "^6.3.0",
+    "@sveltejs/kit": "^2.49.5",
+    "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@tailwindcss/forms": "^0.5.11",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/table-core": "^8.21.3",
-    "@types/node": "^24.10.4",
+    "@types/node": "^24.10.9",
     "@types/turndown": "^5.0.6",
     "@types/umami": "^2.10.1",
     "@zxcvbn-ts/core": "^3.0.4",
     "@zxcvbn-ts/language-common": "^3.0.4",
     "@zxcvbn-ts/language-en": "^3.0.2",
-    "bits-ui": "^2.14.4",
-    "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-oxlint": "^1.35.0",
-    "eslint-plugin-svelte": "^3.13.1",
+    "eslint-plugin-oxlint": "^1.39.0",
+    "eslint-plugin-svelte": "^3.14.0",
     "globals": "^16.5.0",
     "isomorphic-dompurify": "2.26.0",
-    "knip": "^5.76.3",
-    "oxfmt": "^0.17.0",
-    "oxlint": "^1.35.0",
-    "oxlint-tsgolint": "^0.10.0",
+    "knip": "^5.81.0",
+    "oxfmt": "^0.24.0",
+    "oxlint": "^1.39.0",
+    "oxlint-tsgolint": "^0.11.1",
     "pino-pretty": "^13.1.3",
-    "prettier": "^3.7.4",
+    "prettier": "^3.8.0",
     "prettier-plugin-svelte": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "runed": "^0.36.0",
     "sonda": "^0.10.1",
-    "super-sitemap": "^1.0.5",
-    "svelte": "5.46.0",
+    "super-sitemap": "^1.0.6",
+    "svelte": "5.46.4",
     "svelte-check": "^4.3.5",
     "svelte-toolbelt": "^0.10.6",
+    "svelte-turnstile": "^0.11.0",
     "sveltekit-flash-message": "^2.4.6",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.50.1",
+    "typescript-eslint": "^8.53.0",
     "vaul-svelte": "1.0.0-next.7",
-    "vite": "8.0.0-beta.3",
-    "vite-node": "^5.2.0"
+    "vite": "8.0.0-beta.8",
+    "vite-node": "^5.3.0"
   },
   "pnpm": {
     "overrides": {
-      "vite": "8.0.0-beta.3"
+      "vite": "8.0.0-beta.8"
     }
   },
   "dependencies": {
-    "@better-auth/passkey": "1.4.3",
+    "@better-auth/passkey": "^1.4.14",
     "@neondatabase/serverless": "^1.0.2",
     "@qwik.dev/partytown": "^0.11.2",
-    "@sentry/sveltekit": "^10.32.1",
+    "@sentry/sveltekit": "^10.34.0",
     "@unpic/svelte": "^1.0.1",
-    "@upstash/redis": "^1.35.8",
-    "better-auth": "1.4.3",
+    "@upstash/redis": "^1.36.1",
+    "better-auth": "^1.4.14",
+    "bits-ui": "^2.15.4",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3",
     "mode-watcher": "^1.1.0",
     "pino": "^9.14.0",
-    "qrcode-generator": "^2.0.4",
-    "resend": "^6.6.0",
+    "resend": "^6.7.0",
+    "runed": "^0.37.1",
     "svelte-meta-tags": "^4.5.0",
     "svelte-sonner": "^1.0.7",
-    "zod": "^4.2.1"
+    "zod": "^4.3.5"
   }
 }
