payments and subscriptions

--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,15 @@ ADMIN_EMAIL="admin@example.com"
 # Discord
 DISCORD_WEBHOOK_URL="https://discord.com/api/webhooks/your_webhook_url"
 
+# Payment
+PAYSTACK_SECRET_KEY="sk_test_your_paystack_secret_key"
+
+# Cloudflare R2 Storage
+R2_ACCOUNT_ID="your_r2_account_id"
+R2_ACCESS_KEY_ID="your_r2_access_key_id"
+R2_SECRET_ACCESS_KEY="your_r2_secret_access_key"
+R2_BUCKET_NAME="your_r2_bucket_name"
+
 # Database
 ## Redis
 REDIS_URL="redis://localhost:6379"
