--- a/package.json
+++ b/package.json
@@ -90,7 +90,12 @@
     }
   },
   "dependencies": {
+    "@alexasomba/better-auth-paystack": "1.0.4",
+    "@alexasomba/paystack-node": "^1.1.6",
+    "@aws-sdk/client-s3": "^3.990.0",
+    "@aws-sdk/s3-request-presigner": "^3.990.0",
     "@better-auth/passkey": "^1.4.18",
+    "@libpdf/core": "^0.2.7",
     "@neondatabase/serverless": "^1.0.2",
     "@qwik.dev/partytown": "^0.11.2",
     "@sentry/sveltekit": "^10.38.0",
@@ -104,6 +109,7 @@
     "marked": "^17.0.2",
     "mode-watcher": "^1.1.0",
     "pino": "^10.3.1",
+    "qrcode-generator": "^2.0.4",
     "resend": "^6.9.2",
     "runed": "^0.37.1",
     "svelte-meta-tags": "^4.5.0",
