--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ tmp
 .env.sentry-build-plugin
 
 .sonda
+
+# OpenTofu / Terraform
+infra/.terraform/
+infra/.terraform.lock.hcl
+infra/terraform.tfstate
+infra/terraform.tfstate.backup
+infra/terraform.tfvars
